k8s/service-canary.yaml
apiVersion: v1
kind: Service
metadata:
  name: custom-app-canary
  namespace: custom-app
spec:
  selector:
    app: custom-app
  ports:
    - name: http
      port: 80
      targetPort: 8080
